...
    tools:context=".view.Registro">
    <LinearLayout
        android:id="@+id/ly_fragmentProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_id_DatPers_fragementProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/et_id_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/ly_dp1_2_fragmentProfile"
                android:layout_width="match_parent"
                android:layout_height="70dp"
...

                <EditText
                    android:id="@+id/et_id_edad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/et_id_estatura"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/et_id_peso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/ly_dm_fragmentProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:text="@string/glu_min"
...

            <LinearLayout
                android:id="@+id/lydm1_2_fragmentProfile"
                android:layout_width="match_parent"
                android:layout_height="70dp"
...

            <LinearLayout
                android:id="@+id/ly_dm1_2_fragmentProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/rg_id_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/rb_id_rapida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/ly_dm1_3_fragmentProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/ly_dm1_3_2_fragmentProfile"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
...

                    <EditText
                        android:id="@+id/et_udsBasal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/et_udsRapida"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/ly_dm1_3_3_fragmentProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/rg2_id_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/rb_id_dos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
        </LinearLayout>
        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
