...
    <string name="h_estatura">Introduce tu estatura(cm)</string>
    <string name="h_peso">Introduce tu peso(kg)</string>
    <string name="tv_txt_ly1.1_profile_maxmin">Introduce los valores de glucemia deseados entre 80 y 250 mg/dl</string>
    <string name="h_min">mín.(mg/dl)</string>
    <string name="h_max">máx.(mg/dl)</string>
    <string name="tv_txt_insulina">Insulina del bolo</string>
    <string name="rb_txt_Rápida">Rápida</string>
    <string name="rb_txt_UltraRápida">Ultrarrápida</string>
    <string name="tv_txt_uds">Unidades de insulina</string>
    <string name="bt_guardar">Guardar</string>
    <string name="minmax_incorrecto">Introduce valores min y max de glucemia entre los valores indicados</string>
    <string name="minmax_orden">El valor min de glucemia no puedes ser mayor que el valor máximo</string>
    <string name="textfieldEmpty">Rellene todos los campos</string>
    <string name="noRadioButtonsChecked">Algún elemento sin seleccionar</string>

    <!--- SharedPreferences -->
...
        \t\t\t(Entre 80 y 250 mg/dl)</string>
    <string name="glu_min">Mínimo</string>
    <string name="glu_max">Máximo.</string>
    <string name="decimalesBolo">Decimales en el Bolo Corrector:</string>
    <string name="decimal_bc_cero">Cero</string>
    <string name="decimal_bc_dos">Uno</string>
    <string name="decimal_bc_tres">Dos</string>
    <string name="image_perfil">Imagen</string>

    <!-- Buscador de Alimentos-->
    <string name="buscaralimento">Buscar alimento</string>
    <string name="tv_selecionAlimento">Seleccione alimento</string>
    <!-- Strings nuevos-Cambios -->
...
    <string name="tv_ajustes_personal">Personal</string>
    <string name="copia_seguridad">Copia de Seguridad</string>
    <string name="comentario_copiaSeguridad">Se realizará una copia de seguridad de sus registros en la memoria de su dispositivo.</string>
    <string name="comentario_eliminarRegistros">¿ Está seguro que desea eliminar sus registros ?</string>
    <string name="title_activity_psadsadasd">psadsadasd</string>
    <!-- Strings de Historial-->
    <string name="buscar">Buscar</string>


</resources>

