...
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly1_id_RegistroGlucemias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:showIn="@layout/activity_registro_glucemias">

        <Spinner
...
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/et_cantidadglucemia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="50dp"
            android:hint="@string/h_vglucemia"
            android:layout_gravity="center"
            android:paddingLeft="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_guardar"
            android:id="@+id/button"
            android:background="@drawable/btn_save_registro"
            android:textColor="#ffffff"
            android:onClick="guardarGlucemiaOnClick"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>
...
