<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Historial">

    <LinearLayout
        android:id="@+id/ly_id_historial"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <ImageButton
            android:id="@+id/imgbtn_id_iconcalendar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="#00ff"
            android:src="@android:drawable/ic_menu_today"/>
        <Spinner
            android:id="@+id/sp_id_meses"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:entries="@array/spinnerMeses"
            android:scrollbarSize="5sp"
            android:scrollbarThumbVertical="@color/colorPrimary">
        </Spinner>
        <TextView
            android:id="@+id/tv_id_fecha"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_weight="20"/>
        <Button
            android:id="@+id/btn_id_buscar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:text="@string/buscar"
            android:background="@drawable/btn_save_registro"
            android:textColor="#ffffff"
            android:onClick="consultarGrafica"
            android:layout_gravity="center"/>


    </LinearLayout>
    <ListView
        android:id="@+id/lv_id_historial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimary"
        android:dividerHeight="10dp"
        android:layout_marginTop="60dp">
    </ListView>
</android.support.design.widget.CoordinatorLayout>
